--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -88,8 +88,7 @@ jobs:
           path: check
 
       - name: Run coverage
-        if: matrix.config.os == 'macOS-latest' && matrix.config.r == '3.6'
-        runs-on: macOS-latest
+        if: success() && matrix.config.os == 'macOS-latest' && matrix.config.r == '3.6'
         run: |
            remotes::install_cran('covr')
            library(covr)
@@ -100,8 +99,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Clean up build artifacts and render pkgdown site
-        if: matrix.config.os == 'ubuntu-16.04'
-        runs-on: ubuntu-16.04
+        if: success() && matrix.config.os == 'ubuntu-16.04'
         run: |
            devtools::install()
            rmarkdown::render('README.Rmd')
@@ -112,7 +110,7 @@ jobs:
            file.rename('.github/.gitignore.deploy', '.gitignore')
 
       - name: Deploy build package
-        if: matrix.config.os == 'ubuntu-16.04'
+        if: success() && matrix.config.os == 'ubuntu-16.04'
         run: |
           git checkout master
           git add man/\* R/* src/\* README.md NAMESPACE vignettes/*html || echo "No changes to commit"
