Remove unnecessary escapes

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -104,9 +104,9 @@ jobs:
            devtools::install()
            rmarkdown::render('README.Rmd')
            pkgdown::build_site()
-           unlink('src/\*o', force = TRUE)
-           unlink('\*Rcheck', force = TRUE, recursive = TRUE)
-           unlink('\*tar.gz', force = TRUE)
+           unlink('src/\o', force = TRUE)
+           unlink('*Rcheck', force = TRUE, recursive = TRUE)
+           unlink('*tar.gz', force = TRUE)
            file.rename('.github/.gitignore.deploy', '.gitignore')
         shell: Rscript {0}
 
